After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723990 - optical-media: Fix incorrect emblemed icon handling
optical-media: Fix incorrect emblemed icon handling
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-10 00:17 UTC by Bastien Nocera
Modified: 2014-02-10 18:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
optical-media: Fix incorrect emblemed icon handling (911 bytes, patch)
2014-02-10 00:17 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-02-10 00:17:46 UTC
A refcounting bug
Comment 1 Bastien Nocera 2014-02-10 00:17:49 UTC
Created attachment 268616 [details] [review]
optical-media: Fix incorrect emblemed icon handling
Comment 2 Juan A. Suarez Romero 2014-02-10 18:10:03 UTC
commit d4ce00fdf17b3f3000be836e62307b09ebdf0c8e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Jan 21 19:02:00 2014 +0100

    optical-media: Fix incorrect emblemed icon handling
    
    https://bugzilla.gnome.org/show_bug.cgi?id=723990

 src/optical-media/grl-optical-media.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)