optical-media: Fix incorrect emblemed icon handling

https://bugzilla.gnome.org/show_bug.cgi?id=723990